# BackEnd/src/routes/serverRoutes.ts
@@ -8,5 +8,6 @@ const router = Router();
 router.post('/', authMiddleware, ServerController.createServer);
 router.get('/', authMiddleware, ServerController.listServers);
 router.get('/:serverId/channels', authMiddleware, ServerController.getChannels);
+router.post('/:serverId/invites', authMiddleware, ServerController.createInvite);
 
 export default router;
